tests/ui/async-await/mutually-recursive-async-impl-trait-type.no_drop_tracking.stderr
error[E0733]: recursion in an `async fn` requires boxing
  --> $DIR/mutually-recursive-async-impl-trait-type.rs:9:18
   |
LL | async fn rec_1() {
   |                  ^ recursive `async fn`
   |
   = note: a recursive `async fn` must be rewritten to return a boxed `dyn Future`
   = note: consider using the `async_recursion` crate: https://crates.io/crates/async_recursion

error[E0733]: recursion in an `async fn` requires boxing
  --> $DIR/mutually-recursive-async-impl-trait-type.rs:13:18
   |
LL | async fn rec_2() {
   |                  ^ recursive `async fn`
   |
   = note: a recursive `async fn` must be rewritten to return a boxed `dyn Future`
   = note: consider using the `async_recursion` crate: https://crates.io/crates/async_recursion

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0733`.
